--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/material-colors": "^1.2.3",
+    "@types/react-color": "^3.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fabric": "5.3.0-browser",
     "jsdom": "^25.0.0",
     "lucide-react": "^0.440.0",
+    "material-colors": "^1.2.6",
     "next": "14.2.10",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
