--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-query": "^5.60.2",
     "@types/material-colors": "^1.2.3",
     "@types/react-color": "^3.0.12",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +34,7 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "zod": "^3.23.8"
   },
   "devDependencies": {
