--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "replicate": "^1.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
