--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
     "uploadthing": "^7.3.0",
+    "use-file-picker": "^2.1.2",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
