feat: add github auth and database

--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.4",
     "@hono/zod-validator": "^0.4.1",
+    "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
@@ -23,12 +28,14 @@
     "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.36.3",
     "fabric": "5.3.0-browser",
     "hono": "^4.6.10",
     "jsdom": "^25.0.0",
     "lucide-react": "^0.440.0",
     "material-colors": "^1.2.6",
     "next": "14.2.10",
+    "next-auth": "5.0.0-beta.25",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
@@ -48,6 +55,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.28.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.10",
     "postcss": "^8",
