--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/material-colors": "^1.2.3",
     "@types/react-color": "^3.0.12",
     "@uploadthing/react": "^7.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.36.3",
@@ -36,12 +37,14 @@
     "material-colors": "^1.2.6",
     "next": "14.2.10",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
     "replicate": "^1.0.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
@@ -51,6 +54,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/fabric": "^5.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
