--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fabric": "5.3.0-browser",
     "hono": "^4.6.11",
     "jsdom": "^25.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.440.0",
     "material-colors": "^1.2.6",
     "next": "14.2.10",
@@ -60,6 +61,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/fabric": "^5.3.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
