--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "uploadthing": "^7.3.0",
     "use-file-picker": "^2.1.2",
     "uuidv4": "^6.2.13",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
