feat: update npmrc

--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,6 @@ registry=https://registry.npmjs.org/
 strict-peer-dependencies=false
 auto-install-peers=true
 legacy-peer-deps=true
+public-hoist-pattern[]=*
+node-linker=hoisted
+shamefully-hoist=true
